Support bridge methods. Adjust individual names to be closer to java notation.